2.1.0/_sources/gallery/pyplots/pyplot_three.rst.txt


.. _sphx_glr_gallery_pyplots_pyplot_three.py:


============
Pyplot Three
============





.. image:: /gallery/pyplots/images/sphx_glr_pyplot_three_001.png
    :align: center





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt

    # evenly sampled time at 200ms intervals
    t = np.arange(0., 5., 0.2)

    # red dashes, blue squares and green triangles
    plt.plot(t, t, 'r--', t, t**2, 'bs', t, t**3, 'g^')
    plt.show()

**Total running time of the script:** ( 0 minutes  0.018 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: pyplot_three.py <pyplot_three.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: pyplot_three.ipynb <pyplot_three.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
